# tissue-segmentation

./: LICENSE  README.md
minimal_inference_docker/: Dockerfile  README.md  build.sh  main.py
tissue_segmentation/: CHANGELOG.md  README.md  pyproject.toml
tissue_segmentation/tissue_segmentation/: __init__.py
tissue_segmentation/tissue_segmentation/tests/: test_create_tissue_mask.py
